<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.eventpal.EventCreationConfirmation">


    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:text="@string/event_confirmation_alert"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvEventNameConfirmation"
            android:hint="name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvEventDescriptionConfirmation"
            android:layout_alignStart="@+id/tvEventDescriptionConfirmation"
            android:layout_marginBottom="46dp" />
        <TextView
            android:id="@+id/tvEventDescriptionConfirmation"
            android:hint="title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvEventAuthorConfirmation"
            android:layout_alignStart="@+id/tvEventAuthorConfirmation"
            android:layout_marginBottom="59dp" />

        <TextView
            android:id="@+id/tvEventAuthorConfirmation"
            android:hint="Author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/tvEventLocationConfirmation" />
        <TextView
            android:id="@+id/tvEventLocationConfirmation"
            android:hint="location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bEdit"
            android:layout_alignStart="@+id/bEdit"
            android:layout_marginBottom="117dp" />

        <Button
            android:id="@+id/bConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/event_creation_confirm"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="17dp" />

        <Button
            android:id="@+id/bEdit"
            android:text="@string/event_confirmation_edit_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_alignBaseline="@+id/bConfirm"
            android:layout_alignBottom="@+id/bConfirm"
            android:layout_alignParentStart="true" />
    </RelativeLayout>



</FrameLayout>
